--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
         <div class="result"></div>
     </div>
 </body>
-<script src="index.js.js"></script>
+<script src="index.js"></script>
 </html>
